# wa-agent-templates

./: .gitignore  LICENSE  README.md
docs/: BAILEYS-GOTCHAS.md  RUNBOOK-deploy-pi.md
groups/: .env.example  .gitignore  Makefile  README.md  SOUL-default.md
groups/brain/: .env.example  pyproject.toml
groups/brain/src/phoenix_brain/: __init__.py  admin_cli.py  anthropic_client.py  app_config.py  audit.py  chat.py  config.py  db.py  db_init.py  discussions.py  gating.py  models.py  proactive.py  safety.py  server.py  sessions.py  soul.py  tools.py
groups/deploy/systemd/: phoenix-brain.service  phoenix-listener.service  phoenix-ui.service
groups/docs/: SOUL-template.md  architecture.md  deploy-rpi5.md  pair-qr-via-ui.md
groups/scripts/: deploy-rpi5.sh
groups/ui/: .env.example  pyproject.toml
groups/ui/src/phoenix_ui/: __init__.py  clients.py  config.py  server.py
groups/ui/src/phoenix_ui/templates/: _base.html  _partials_wa_state.html  audit.html  dashboard.html  group_detail.html  group_messages.html  groups.html  kb_detail.html  kbs.html  settings.html  setup.html
groups/wa-listener/: .env.example  package.json  tsconfig.json
groups/wa-listener/src/: index.ts
one-on-one/: .env.example  .gitignore  Makefile  README.md  SOUL-default.md
one-on-one/brain/: .env.example  pyproject.toml
one-on-one/brain/src/iris_brain/: __init__.py  admin.py  agentic.py  chat.py  config.py  db.py  intents.py  kb_ingest.py  media.py  models.py  relay.py  safety.py  server.py  sessions.py  soul.py  tools.py
one-on-one/brain/tests/: conftest.py  test_chat_colega.py  test_handle_message.py  test_kb_ingest.py  test_media.py  test_relay.py  test_tools.py
one-on-one/db/alembic/: env.py
one-on-one/db/alembic/versions/: 0001_initial.py  0002_align_schema_with_orm.py  0003_runtime_config.py  0004_add_kind_colega.py  0005_add_kind_owner.py  0006_tasks.py  0007_rename_course_facts_to_kb_facts.py  0008_media.py
one-on-one/db/migrations/versions/: 0009_task_scheduled.py  0010_anti_saturacion.py  0011_kb_ingest_log.py
one-on-one/db/seed/: kb-example.sql
one-on-one/deploy/: iris-watchdog.sh
one-on-one/deploy/systemd/: iris-brain.service  iris-relay.service  iris-ui.service  iris-wa-listener.service
one-on-one/docs/: architecture.md
one-on-one/relay-bot/: .env.example  pyproject.toml
one-on-one/relay-bot/src/iris_relay/: __init__.py  config.py  server.py  state.py  telegram.py  templates.py
one-on-one/relay-bot/tests/: test_server.py  test_templates.py
one-on-one/scripts/: deploy-rpi5.sh
one-on-one/tester/: pyproject.toml
one-on-one/tester/scenarios/: 01-saludo.yaml  02-consulta-cita.yaml  03-info-curso.yaml  04-urgencia.yaml
one-on-one/tester/src/iris_tester/: __init__.py  flow.py  mock_relay_bot.py  mock_wa_listener.py  simulate.py
one-on-one/ui/: .env.example  pyproject.toml
one-on-one/ui/src/iris_ui/: __init__.py  admin_routes.py  brain_client.py  config.py  server.py
one-on-one/ui/src/iris_ui/templates/: base.html  contact.html  courses.html  directory.html  tickets.html
one-on-one/ui/src/iris_ui/templates/_partials/: contacts_table.html  courses_ingest_preview.html  courses_list.html  tickets_columns.html
one-on-one/ui/src/iris_ui/templates/admin/: _layout.html  dashboard.html  health.html  kb_ingest_log.html  media.html  metrics.html  settings.html  soul.html  task_new.html  tasks.html  tickets.html  unauthorized.html  whatsapp.html
one-on-one/ui/src/iris_ui/templates/admin/_partials/: contact_search.html  dashboard_cards.html  health_table.html  media_grid.html  regen_token_result.html  reply_result.html  rotate_key_result.html  settings_form.html  soul_diff.html  task_preview.html  ticket_drawer.html  tickets_kanban.html  toast.html
one-on-one/wa-listener/: .env.example  .gitignore  package.json  tsconfig.json
one-on-one/wa-listener/src/: index.ts  relay-bot.ts  types.ts
