[project]
name = "phoenix-brain"
version = "0.1.0"
description = "Brain daemon HTTP para Phoenix v2 (agente WhatsApp de grupos)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "anthropic>=0.101",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]
postgres = [
  "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
