[project]
name = "phoenix-ui"
version = "0.1.0"
description = "Phoenix v2 admin UI (FastAPI + Jinja2 + HTMX)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "qrcode[pil]>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
