[project]
name = "iris-brain"
version = "0.1.0"
description = "Brain daemon HTTP para Iris v2 (asistente WhatsApp del Dr. Juan Manuel Fraga)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "anthropic>=0.101",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
