[project]
name = "iris-relay"
version = "0.1.0"
description = "Iris v2 — Telegram relay bot between brain and OWNER's personal channel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
