[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iris-tester"
version = "0.1.0"
description = "Iris v2 — tester harness (simulación paciente + mocks de wa-listener/relay-bot) sin WhatsApp/Telegram reales"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
iris-tester = "iris_tester.simulate:app"
iris-mock-wa = "iris_tester.mock_wa_listener:run"
iris-mock-relay = "iris_tester.mock_relay_bot:run"

[tool.hatch.build.targets.wheel]
packages = ["src/iris_tester"]
