[project]
name = "iris-ui"
version = "0.1.0"
description = "Iris v2 UI - FastAPI + Jinja2 + HTMX read-only console for the Iris brain."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iris_ui"]
